# vcspm

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  vcpm(Vinx C++ package manager).xmind  vcspm_packages_template.json
demos/: vcspm_packages.json
example/: vcspm.json
example/vcspm/patches/test-script/: test.py
vcspm/: HelpFormatter.py  __init__.py  decompress.py  downloader.py  extractor.py  logger.py  main.py  manager.py  package.py  param.py  utils.py  vcspm.py  vcspm_packages_template.json
